<resources>
    <string name="app_name">Mobile</string>

    <string name="name">Ronald Andrean</string>
    <string name="nrp">05111540000174</string>

    <string name="menu_mobile">Mobile</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_database">Database</string>
    <string name="menu_attendance">Attendance</string>

    <string name="toast_pending_exit">Tap again to exit</string>
    <integer name="pending_exit_interval">2000</integer>

    <string name="default_error_message">Something went wrong!</string>

    <!-- Calculator -->
    <string name="edittext_hint_number1">Number 1</string>
    <string name="edittext_hint_number2">Number 2</string>
    <string name="edittext_hint_result">Result</string>
    <string name="btn_add">+</string>
    <string name="btn_subtract">-</string>
    <string name="btn_multiply">x</string>
    <string name="btn_divide">/</string>
    <string name="placeholder_calculator_error">Error!!</string>
    <string name="calculator_error_empty">Can\'t be empty</string>
    <string name="calculator_error_invalid_int">Invalid int</string>

    <!-- Gallery -->
    <string name="no_take_picture_permission">WRITE_EXTERNAL_STORAGE and CAMERA permission is required</string>
    <string name="read_storage_permission_denied">READ_EXTERNAL_STORAGE permission was denied</string>
    <string name="revoke_permission">Revoke</string>

    <!-- Upload -->
    <string name="no_camera_permission">CAMERA permission is required</string>
    <string name="upload_image_elapsed_time">%1$fs</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_clear">Clear</string>

    <!-- Absent -->
    <string name="qrcode_invalid">Invalid QRCode</string>
    <string name="camera_permission_denied">CAMERA permission was denied</string>
    <string name="location_permission_denied">ACCESS_LOCATION permission was denied</string>
</resources>
