<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/menu_calculator" />

        <item
            android:id="@+id/menu_gallery"
            android:checked="true"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/menu_upload"
            android:icon="@drawable/ic_network"
            android:title="@string/menu_upload" />

        <item
            android:id="@+id/menu_database"
            android:icon="@drawable/ic_storage"
            android:title="@string/menu_database" />

        <item
            android:id="@+id/menu_attendance"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_attendance" />

    </group>

</menu>
